<resources>
    <string name="app_name">My Application</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="multiautocompletetextview">MultiAutoCompleteTextView</string>
    <string name="TextView2">TextView2</string>
    <string name="TextView4">TextView4</string>
    <string name="TextView1">TextView1</string>
    <string name="TextView3">TextView3</string>
    <string name="TextView5">TextView5</string>
    <string name="TextView6">TextView6</string>
    <string name="TextView7">TextView7</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="tab_text_1">Profile</string>
    <string name="tab_text_2">Drink to Meal</string>
    <string name="tab_text_3">Drink Information</string>
    <string name="tab_text_4">Info</string>
</resources>